:bug: fix output folder deletion